--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "Yupana",
   "description": "Project Yupana by The Information Lab. Author Craig Bloodworth. License GPL3",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "main": "app.html",
   "window": {
     "title": "Project Yupana - The Information Lab",
-    "toolbar": false,
+    "toolbar": true,
     "frame": true,
-    "position": "mouse",
+    "position": "center",
     "width": 1100,
     "height": 800,
     "icon": "images/icon.png"
